[package]
name = "manas_space"
version = "0.0.0"
edition = "2021"
description = "This crate provides abstractions for modelling storage spaces confirming to generalized solid protocol."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"


[dependencies]
manas_http = { version = "0.0.0", path = "../manas_http", features = [
    "representation",
    "typed-headers",
] }
thiserror = "1.0.43"
once_cell = "1.18.0"
iri-string = "0.7.0"
smallvec = "1.11.0"
dyn-clone = "1.0.14"
if_chain = "1.0.2"
gdp_rs = { version = "0.0.3", path = "../../fcrates/gdp_rs" }
headers = "0.3.8"
http = "0.2.9"
mime = "0.3.17"
vec1 = "1.10.1"

# feature: test-utils
claims = { version = "0.7.1", optional = true }
rstest = { version = "0.18.1", optional = true }
webid = { version = "0.1.0", path = "../../fcrates/webid" }


[dev-dependencies]
claims = "0.7.1"
rstest = "0.18.1"
manas_http = { version = "0.0.0", path = "../manas_http", features = [
    "representation",
    "typed-headers",
    "test-utils",
] }

[features]
test-utils = ["dep:rstest", "dep:claims", "manas_http/test-utils"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
