[package]
name = "manas_specs"
version = "0.1.0"
edition = "2021"
description = "This crate provides types to represent spec requirements, and exports statics for different specs in solid ecosystem."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

[dependencies]
dyn_problem = { version = "0.1.1", path = "../../fcrates/dyn_problem", features = ["ext-typed-record"] }
http = "0.2.9"
http-api-problem = { version = "0.57.0", features = ["api-error"] }
iri-string = "0.7.0"
manas_http = { version = "0.1.1", path = "../manas_http" }
once_cell = "1.18.0"
percent-encoding = "2.3.0"
serde = "1.0.169"
serde_with = "3.0.0"
thiserror = "1.0.43"
typed_record = { version = "0.1.1", path = "../../fcrates/typed_record" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
