[package]
name = "manas_storage"
version = "0.1.0"
edition = "2021"
description = "This crate provides traits and implementations for a `SolidStorage`, and `SolidStorageService`, (a solid-protocol compatible http service over a storage)."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"


[dependencies]
anyhow = "1.0.79"
dyn-clone = "1.0.16"
dyn_problem = { version = "0.1.1", path = "../../fcrates/dyn_problem", features = [
    "ext-typed-record",
] }
either = "1.9.0"
futures = "0.3.30"
gdp_rs = { version = "0.1.1", path = "../../fcrates/gdp_rs" }
ghost = "0.1.17"
headers = "0.3.9"
http = "0.2.11"
http-api-problem = { version = "0.57.0", features = ["api-error", "hyper"] }
hyper = "0.14.28"
if_chain = "1.0.2"
iri-string = "0.7.0"
manas_access_control = { version = "0.1.0", path = "../manas_access_control" }
manas_authentication = { version = "0.1.0", path = "../manas_authentication" }
manas_http = { version = "0.1.1", path = "../manas_http", features = [
    "service",
    "conditional_req",
] }
manas_repo = { version = "0.1.0", path = "../manas_repo" }
manas_space = { version = "0.1.0", path = "../manas_space" }
manas_specs = { version = "0.1.0", path = "../manas_specs" }
mime = "0.3.17"
name_locker = { version = "0.1.1", path = "../../fcrates/name_locker" }
once_cell = "1.19.0"
rand = "0.8.5"
rdf_dynsyn = { version = "0.4.0", path = "../../fcrates/rdf_dynsyn" }
rdf_utils = { version = "0.3.1", path = "../../fcrates/rdf_utils", features = ["compat-iri-string"] }
rdf_vocabularies = { version = "0.2.0", features = [
    "ns-ldp",
    "ns-pim",
    "ns-solid",
] }
sophia_api = "0.8.0"
thiserror = "1.0.56"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = { version = "0.1.40", features = ["attributes"] }
typed_record = { version = "0.1.1", path = "../../fcrates/typed_record", features = [
    "ext-http",
] }
vec1 = "1.10.1"


[features]
test-utils = ["manas_repo/test-utils", "manas_space/test-utils"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
