[package]
name = "acp"
version = "0.1.0"
rust = "1.79.0"
edition = "2021"
description = "An implementation of [access control policy](https://solid.github.io/authorization-panel/acp-specification/) concepts and engine for rust."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

[dependencies]
rdf_utils = { version = "0.3.1", path = "../rdf_utils" }
rdf_vocabularies = { version = "0.2.0", features = ["ns-acp", "ns-acl"] }
paste = { version = "1.0.15" }
sophia_api = { version = "0.8.0" }

# feature: engine
dyn-clone = { version = "1.0.17", optional = true }
dyn_problem = { version = "0.1.1", path = "../dyn_problem", optional = true, features = ["alias-future"]}
futures = { version = "0.3.30", optional = true }
ghost = { version = "0.1.17", optional = true }
rand = { version = "0.8.5", optional = true }
tower = { version = "0.4.13", optional = true, features = ["util"]}
tracing = { version = "0.1.40", optional = true }
unwrap-infallible = { version = "0.1.5", optional = true }


[features]
engine = [
    "dep:dyn-clone",
    "dep:dyn_problem",
    "dep:unwrap-infallible",
    "dep:tracing",
    "dep:tower",
    "dep:rand",
    "dep:ghost",
    "dep:futures",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
