[package]
name = "dpop"
version = "0.1.1"
edition = "2021"
description = "An implementation of DPoP for rust."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"


[dependencies]
base64 = "0.21.2"
canonical_json = "0.5.0"
frunk_core = "0.4.2"
gdp_rs = { version = "0.1.1", path = "../gdp_rs", features = ["serde"] }
http = "0.2.9"
http-serde = "1.1.2"
http_uri = { version = "1.0.1", path = "../http_uri", features = ["serde"] }
once_cell = { version = "1.18.0" }
picky = { version = "7.0.0-rc.8", default-features = false, features = [
    "jose",
] }
regex = { version = "1.10.2" }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.41"
uuid = { version = "1.4.0", features = ["v4"] }

# feature: http-header
bytes = { version = "1.4.0", optional = true }
itertools = { version = "0.11.0", optional = true }
headers = { version = "0.3.8", optional = true }

[features]
http-header = ["dep:headers", "dep:bytes", "dep:itertools"]
# TODO must be removed.
unsafe-optional-ath-claim = []

[dev-dependencies]
claims = "0.7.1"
rstest = "0.18.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
