[package]
name = "dpop"
version = "0.1.1"
edition = "2021"
description = "An implementation of DPoP for rust."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"


[dependencies]
base64 = "0.22.1"
canonical_json = "0.5.0"
frunk_core = "0.4.2"
gdp_rs = { version = "0.1.1", path = "../gdp_rs", features = ["serde"] }
http = "1.1.0"
http-serde = "2.1.1"
http_uri = { version = "1.0.1", path = "../http_uri", features = ["serde"] }
once_cell = { version = "1.19.0" }
picky = { version = "7.0.0-rc.8", default-features = false, features = [
    "jose",
] }
regex = { version = "1.10.5" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
uuid = { version = "1.9.1", features = ["v4"] }

# feature: http-header
bytes = { version = "1.6.0", optional = true }
itertools = { version = "0.13.0", optional = true }
headers = { version = "0.4.0", optional = true }

[features]
http-header = ["dep:headers", "dep:bytes", "dep:itertools"]
# TODO must be removed.
unsafe-optional-ath-claim = []

[dev-dependencies]
claims = "0.7.1"
rstest = "0.21.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
