[package]
name = "dyn_problem"
version = "0.1.1"
edition = "2021"
description = "This crate provides a `Problem` type to represent dynamic problems, with problem types identified by uri."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"


[dependencies]
http = "0.2.9"
http-api-problem = {version = "0.57.0", features = ["api-error"]}
iri-string = "0.7.0"
once_cell = "1.18.0"

# feature: ext-typed-record
typed_record = { version = "0.1.1", path = "../typed_record", features = ["ext-http"], optional = true}

# feature: anon-problem-type
uuid = { version = "1.4.0", features = ["v4"], optional = true }

# feature: alias-future
futures = { version = "0.3.28", optional = true }


[features]
ext-typed-record = ["dep:typed_record"]
alias-future = ["dep:futures"]
anon-problem-type = ["dep:uuid"]
default = ["anon-problem-type"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
