[package]
name = "http_typed_headers"
version = "0.1.0"
rust = "1.79.0"
edition = "2021"
description = "This crate provides few typed http headers."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.19.0"
regex = "1.10.5"
thiserror = "1.0.61"
tracing = { version = "0.1.40", features = ["attributes"] }
unicase = { version = "2.7.0" }
ecow = "0.2.2"
headers = { version = "0.4.0" }
http = { version = "1.1.0" }
smallvec = { version = "1.13.2" }
vec1 = { version = "1.12.1", features = [
    "smallvec-v1",
    "smallvec-v1-write",
] }

# feature: location
itertools = { version = "0.13.0", optional = true }

# feature: www-authenticate
either = { version = "1.13.0", optional = true }

# feature: media-type, accept-x
mime = { version = "0.3.17", optional = true }

# feature: qvalue, accept
rust_decimal = { version = "1.35.0", optional = true }

# feature: link, location
iri-string = { version = "0.7.2", features = ["serde"], optional = true }

# feature: slug
percent-encoding = { version = "2.3.1", optional = true }

# feature: docsrs
document-features = { version = "0.2.8", optional = true }


[features]
qvalue = ["dep:rust_decimal"]
media-type = ["dep:mime"]
##! Enables `Accept` typed header.
accept = ["media-type", "qvalue"]
##! Enables `Accept-Post`, 1Accept-Put` , `Accept-Patch` typed headers.
accept-method = ["media-type"]
##! Enables `Link` typed header.
link = ["dep:iri-string"]
##! Enables `Location` typed header.
location = ["dep:iri-string", "dep:itertools"]
##! Enables `Forwarded`, `X-Forwarded-*` typed headers.
forwarded = []
##! Enables `Prefer` typed header.
prefer = []
##! Enables `Wac-Allow` typed header.
wac-allow = []
##! Enables `Www-Authenticate` typed header.
www-authenticate = ["dep:either"]
##! Enables `Slug` typed header.
slug = ["dep:percent-encoding"]

default = [
    "accept",
    "accept-method",
    "link",
    "location",
    "forwarded",
    "prefer",
    "wac-allow",
    "www-authenticate",
    "slug",
]

[dev-dependencies]
claims = "0.7.1"
rstest = "0.21.0"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
rustdoc-args = ["--cfg", "doc_cfg"]
