[package]
name = "http_uri"
version = "1.0.1"
edition = "2021"
description = "This crate provides types for representing http uris and their invariants."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

[dependencies]
iri-string = "0.7.0"
unicase = "2.6.0"
thiserror = "1.0.41"

# feature: serde
serde = { version = "1.0.166", optional = true }

# feature: invariants
gdp_rs = { version = "0.1.1", path = "../gdp_rs", optional = true }
frunk_core = { version = "0.4.2", optional = true }

# feature: sophia-term-impl
sophia_api = { version = "0.8.0-alpha.3", optional = true }


[features]
invariants = ["gdp_rs", "dep:frunk_core"]
serde = ["dep:serde", "iri-string/serde", "gdp_rs?/serde"]
sophia = ["dep:sophia_api"]
default = ["invariants"]

[dev-dependencies]
claims = "0.7.1"
rstest = "0.18.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
