[package]
name = "name_locker"
version = "0.1.0"
edition = "2021"
description = "This crate provides interface for asynchronous name lockers, that can run an async task with lock on a given name."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"


[dependencies]
futures = "0.3.28"

# feature: inmem
async-stream = { version = "0.3.5", optional = true }
dashmap = { version = "5.4.0", optional = true }
tokio = { version = "1.29.1", optional = true, features = ["sync"] }

[features]
inmem = ["dep:dashmap", "dep:tokio", "dep:async-stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
