[package]
name = "rdf_dynsyn"
version = "0.3.0"
edition = "2021"
description = "This crate provides sophia-compatible and sophia-based rdf parsers/serializers, that can be instantiated against any of supported syntaxes dynamically at run time."
keywords = ["rdf", "parse", "serialize", "sophia"]
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = "0.8.0-alpha.1"
sophia_turtle = "0.8.0-alpha.1"
sophia_rio = "0.8.0-alpha.1"
rio_turtle = "0.8.4"
rio_api = "0.8.4"
once_cell = "1.18.0"
mime = "0.3.17"
thiserror = "1.0.41"
tracing = "0.1.37"
anymap2 = "0.13.0"
gdp_rs = { version = "0.1.0", path = "../gdp_rs" }
frunk_core = "0.4.2"
if_chain = "1.0.2"
resiter = "0.5.0"

# feature: rdf_xml
sophia_xml = { version = "0.8.0-alpha.1", optional = true }
rio_xml = { version = "0.8.4", optional = true }


# feature: async
futures = { version = "0.3.28", optional = true }
bytes = { version = "1.4.0", optional = true }
tokio = { version = "1.29.1", optional = true, features = [
    "io-util",
    "sync",
    "rt",
] }
async-compat = { version = "0.2.1", optional = true }
tokio-util = { version = "0.7.8", optional = true, features = [
    "io-util",
    "io",
] }
tokio-stream = { version = "0.1.14", optional = true }

[features]
async = [
    "dep:futures",
    "dep:bytes",
    "dep:tokio",
    "dep:async-compat",
    "dep:tokio-util",
    "dep:tokio-stream",
]
rdf_xml = [
    "dep:sophia_xml","dep:rio_xml"
]
default = ["rdf_xml"]

[dev-dependencies]
env_logger = "0.10.0"
tracing = { version = "0.1.37", features = ["log"] }
sophia_isomorphism = "0.8.0-alpha.1"
rstest = "0.18.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
