[package]
name = "rdf_dynsyn"
version = "0.4.0"
edition = "2021"
description = "This crate provides sophia-compatible and sophia-based rdf parsers/serializers, that can be instantiated against any of supported syntaxes dynamically at run time."
keywords = ["rdf", "parse", "serialize", "sophia"]
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = "0.8.0"
sophia_turtle = "0.8.0"
sophia_rio = "0.8.0"
rio_turtle = "0.8.4"
rio_api = "0.8.4"
once_cell = "1.19.0"
mime = "0.3.17"
thiserror = "1.0.61"
tracing = "0.1.40"
anymap2 = "0.13.0"
gdp_rs = { version = "0.1.1", path = "../gdp_rs" }
frunk_core = "0.4.2"
if_chain = "1.0.2"
resiter = "0.5.0"
sophia_iri = { version = "0.8.0" }

# feature: rdf-xml
sophia_xml = { version = "0.8.0", optional = true }
rio_xml = { version = "0.8.4", optional = true }


# feature: async
futures = { version = "0.3.30", optional = true }
bytes = { version = "1.6.0", optional = true }
tokio = { version = "1.38.0", optional = true, features = [
    "io-util",
    "sync",
    "rt",
] }
async-compat = { version = "0.2.4", optional = true }
tokio-util = { version = "0.7.11", optional = true, features = [
    "io-util",
    "io",
] }
tokio-stream = { version = "0.1.15", optional = true }

# feature: jsonld
json-ld = { version = "^0.15.1", optional = true}
sophia_jsonld = { version = "0.8.0", optional = true}
locspan = { version = "^0.7.16", optional = true }
json-syntax = { version = "^0.9.6", optional = true }
rdf-types = { version = "^0.15.4", optional = true }

# feature: docsrs
document-features = { version = "0.2.8", optional = true }

# feature: jsonld-http-loader
reqwest = { version = "0.12.5", optional = true, default-features = false }
reqwest-middleware = { version = "0.3.2", optional = true }
http_typed_headers = { version = "0.1.0", path = "../http_typed_headers", default-features = false, features = ["accept", "location", "link"], optional = true }
headers = { version = "0.4.0", optional = true }
iref = { version = "2.2", optional = true }

[features]
##! Enables async wrapper parsers and serializers.
async = ["dep:futures", "dep:bytes", "dep:tokio", "dep:async-compat", "dep:tokio-util", "dep:tokio-stream"]
##! Enables rdf-xml parsers and serializers.
rdf-xml = ["dep:sophia_xml", "dep:rio_xml"]
##! Enables json-ld parsers and serializers.
jsonld = ["dep:json-ld", "dep:sophia_jsonld", "dep:locspan", "dep:futures", "dep:rdf-types"]
##! Provides `HttpDocumentLoader` to be used with json-ld parser, serializers.
jsonld-http-loader = ["dep:reqwest", "dep:json-syntax", "dep:reqwest-middleware", "dep:http_typed_headers", "dep:headers", "dep:iref", "jsonld"]
##! Enables tls with rustls.
rustls-tls =["reqwest?/rustls-tls"]
##! Enables tls with native-tls.
native-tls =["reqwest?/native-tls"]
default = ["rdf-xml", "rustls-tls"]

[dev-dependencies]
env_logger = "0.11.3"
tracing = { version = "0.1.40", features = ["log"] }
sophia_isomorphism = "0.8.0"
rstest = "0.21.0"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
rustdoc-args = ["--cfg", "doc_cfg"]
