[package]
name = "solid_oidc_types"
version = "0.1.0"
edition = "2021"
description = "A crate with types representing concepts in solid-oidc specification."
repository = "https://github.com/manomayam/manas"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dpop = { version = "0.1.0", path = "../dpop" }
gdp_rs = { version = "0.1.0", path = "../gdp_rs", features = ["serde"] }
http_uri = { version = "1.0.0", path = "../http_uri", features = ["serde"] }
picky = { version = "7.0.0-rc.8", default-features = false, features = [
    "jose",
] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
tracing = { version = "0.1.37", features = ["attributes"] }
webid = { version = "0.1.0", path = "../webid", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
