[package]
name = "manas_specs_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
serde_json = "1.0.100"
iri-string = "0.7.0"
syn = "2.0.24"
regex = "1.9.1"
once_cell = "1.18.0"
rdf_vocabularies = { version = "0.2.0", features = ["ns-spec", "ns-dcterms"] }
handlebars = "4.3.7"
serde = { version = "1.0.169", features = ["derive"] }
sophia_api = "0.8.0-alpha.1"
rdf_utils = { version = "0.3.0", path = "../../../fcrates/rdf_utils" }
sophia_turtle = "0.8.0-alpha.1"

[package.metadata.release]
release = false
