[package]
name = "manas_specs_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
serde_json = "1.0.113"
iri-string = "0.7.0"
syn = "2.0.48"
regex = "1.10.3"
once_cell = "1.19.0"
rdf_vocabularies = { version = "0.2.0", features = ["ns-spec", "ns-dcterms"] }
handlebars = "5.1.0"
serde = { version = "1.0.196", features = ["derive"] }
sophia_api = "0.8.0"
rdf_utils = { version = "0.3.1", path = "../../../fcrates/rdf_utils" }
sophia_turtle = "0.8.0"

[package.metadata.release]
release = false
