[package]
name = "manas_specs_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde_json = "1.0.120"
iri-string = "0.7.2"
syn = "2.0.68"
regex = "1.10.5"
once_cell = "1.19.0"
rdf_vocabularies = { version = "0.2.0", features = ["ns-spec", "ns-dcterms"] }
handlebars = "5.1.2"
serde = { version = "1.0.203", features = ["derive"] }
sophia_api = "0.8.0"
rdf_utils = { version = "0.3.1", path = "../../../fcrates/rdf_utils" }
sophia_turtle = "0.8.0"

[package.metadata.release]
release = false
